--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 audio/
+.idea/
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode,python,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,visualstudiocode,python,macos,windows
