update micro sd to 64 bits

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 
 audio/
 .idea/
+classes/__pycache__/
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,visualstudiocode,python,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,visualstudiocode,python,macos,windows
